# crzzpy-statcast

./: .gitignore  README.md  config.py  logging_config.py  main.py  pyproject.toml  requirements.txt  statcast_fetch.py
config/: config.py
src/: statcast_fetch.py
src/config/: column_types.yaml  config.py  config.yaml  logging_config.py
src/utils/: bq_schema_helper.py
src/writers/: base_writer.py  bq_writer.py  csv_writer.py
tests/: test_daterange.py  test_fetch_chunk.py  test_fetch_data_in_parallel.py
